Improve the way allowed origins are added - lesser dependency, can be changed at -run or at -env level easier